[package]
name = "wasm-ws"
version = "0.1.0"
edition = "2021"
description = "websocket test"
repository = ""
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1.0"

#getrandom = { version = "0.2", features = ["js"] }

#hex = "0.4.3"
#parity-scale-codec = "3.1.5"
##sp-core = { version = "11.0.0", default-features = false, features = ["full_crypto","std"] }
#sp-core = { version = "11.0.0", default-features = false, features = ["full_crypto"] }
